# rust_build_demo

./: .gitignore  Cargo.toml  README.md
.github/workflows/: optimized-build.yml  unoptimized-build.yml
src/: main.rs
