[package]
name = "rust_build_demo"
version = "0.1.0"
edition = "2024"

[dependencies]
pingora = { version = "0.8", features = ["lb"] }
async-trait = "0.1"

[profile.release]
opt-level = 3               # Maximize performance
debug = true                # Keep debug symbols for profiling
split-debuginfo = "packed"  # Create .dwp alongside the binary
lto = "fat"                 # Link-time optimization
codegen-units = 1           # More aggressive optimization by reducing parallelism
panic = "abort"             # Reduce panic handling code
incremental = false         # Ensure no incremental compilation
overflow-checks = true      # Ensure safer arithmetic operations
